# django-spaninja

./: .gitignore  .pycheck.db  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: static.yml
apps/account/: api.py
apps/account/forms/: registration.py
apps/account/utils/: email.py  token.py
apps/base/: schemas.py
apps/doc/: apps.py
apps/doc/management/commands/: build_doc.py
backend/apps/account/: api.py  apps.py  schemas.py
backend/apps/account/services/: activate.py  email.py
backend/base/: schemas.py
docsite/: .gitignore  components.d.ts  package.json  tailwind.config.js
docsite/public/doc/: nav.json
docsite/public/doc/account_app/schemas/: docstrings.json
docsite/public/doc/get_started/: 3.build.md  3.forms.md
docsite/src/: App.vue  conf.ts  main.ts  router.ts  state.ts
docsite/src/components/: TheHeader.vue
docsite/src/components/sidebars/: DefaultSidebar.vue
docsite/src/pages/: [...all].vue
frontend/: .gitignore  components.d.ts  package.json  vite.config.ts
frontend/src/: App.vue  forms.ts  interfaces.ts  main.ts  router.ts  state.ts
frontend/src/components/: TheHeader.vue
frontend/src/components/account/: LoginForm.vue  RegistrationForm.vue
frontend/src/views/: HomeView.vue  PageView.vue
main/: api.py  urls.py
main/settings/: __init__.py  dev.py  local.py  settings.py
main/templates/: index.html
requirements/: base.txt  dev.txt
tests/: conftest.py  test_fixture.py  test_ninja_api.py  test_testcase.py  testcase.py
tests/account/: test_account.py  test_api.py  test_utils.py
(+3 files in other folders)
