[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apps"
version = "0.2.1"
description = "Django template package"
license = {file = "LICENSE"}
requires-python = ">=3.9"

[options]
include_package_data = true
zip_safe = false

[tool.setuptools]
packages = ["main", "apps"]
